# pydiy2

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: pydiy2.cpp  pydiy2.h
tests/: test_decompose.py  tfPtycho_DIY.py
